--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="reset.css"/>
+    <link rel="stylesheet" href="style.css"/>
+    <title>Fly Together</title>
+  </head>
+  <body>
+  <header>
+    <a href=""/></a>
+    <div>
+    <h1>
+      Fly Together
+    </h1>
+    <p>
+      Encontre os melhores pacotes de viagem
+    </p>
+    </div>
+  </header>
+  <main>
+    <div class="promos">
+      <a href="" id="promo"><div></div></a>
+      </div>
+    <img/>
+    <main>
+    </body>
+</html> 
 
